general cleanup of ControlDeskView and LaneView